[project]
name = "duplocloud-client"
description = "Command line Client for interacting with Duplocloud portals."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10.0"
keywords = [
  "duplocloud",
  "duplo", 
  "duploctl", 
  "duplo-client"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
authors = [
{ name = "Kelly", email = "kelly@duplocloud.net" }
]
maintainers = [
{ name = "Kelly", email = "kelly@duplocloud.net" }
]
dependencies = [
  "requests>=2.22.0",
  "cachetools>=5.2.0",
  "jmespath>=1.0.1",
  "pyyaml>=6.0.1",
  "jsonpatch>=1.33",
  "pyjwt>=2.8.0",
  "jsonpointer>=2.4",
  "duplocloud-sdk"
]
[project.optional-dependencies]
build = [
  "invoke",
  "setuptools_scm",
  "build",
  "wheel",
  "twine",
  "pyinstaller",
  "toml",
  "semver",
  "GitPython",
  "Jinja2"
]
test = [
  "pytest",
  "ruff",
  "pip-audit",
  "pytest-black",
  "pytest-isort",
  "pytest-cov",
  "pytest-dependency",
  "pytest-order",
  "pytest-mock"
]
aws = [
  "boto3>=1.34.83"
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]<1.0",
  "mkdocstrings-python<2.0"
]
[build-system]
requires = [
  "setuptools>=42",
  "setuptools_scm[toml]>=6.2",
  "wheel",
  "build"
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://duplocloud.com/"
Documentation = "https://cli.duplocloud.com/"
Repository = "https://github.com/duplocloud/duploctl"
Issues = "https://github.com/duplocloud/duploctl/issues"
Changelog = "https://cli.duplocloud.com/Changelog"
LatestRelease = "https://github.com/duplocloud/duploctl/releases"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --cov=src --cov-report term-missing"
testpaths = [
  "src/tests"
]
pythonpath = [
  "src"
]
markers = [
  "integration: mark a test as an integration test",
  "unit: mark a test as a unit test",

  "aws: mark a test as an aws test",
  "gcp: mark a test as a gcp test",
  "azure: mark a test as an azure test",

  "k8s: mark a test as requiring a kubernetes (EKS/GKE/AKS) infrastructure",
  "ecs: mark a test as requiring an ECS infrastructure (AWS only)",
  "duplo: mark a test as requiring a duplo-native infrastructure (no k8s, no ecs)",
  "lifecycle: mark a test as an infra/tenant lifecycle test (always required for dep registration)",

  "hosts: mark a test as a hosts resource test",
  "asg: mark a test as an asg resource test",
  "configmap: mark a test as a configmap resource test",
  "secret: mark a test as a secret resource test",
  "ingress: mark a test as an ingress resource test",
  "job: mark a test as a job resource test",
  "cronjob: mark a test as a cronjob resource test",
  "lambda_: mark a test as a lambda resource test",
  "rds: mark a test as an rds resource test",
  "cloudfront: mark a test as a cloudfront resource test",
  "awssecret: mark a test as an aws secret resource test",
  "jit: mark a test as a jit resource test"
]

[tool.coverage.run]
omit = [
  "*_test.py",
  "foo.py",
  "src/tests/*",
  "**/__*__.py"
]

[tool.ruff]
exclude = [
  "**/*_test.py", 
  "**/test_*.py",
  "src/tests/*"
]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[project.scripts]
duploctl = "duplocloud.cli:main"

[project.entry-points."duplocloud.net"]
infrastructure = "duplo_resource.infrastructure:DuploInfrastructure"
plan = "duplo_resource.plan:DuploPlan"
tenant = "duplo_resource.tenant:DuploTenant"
version = "duplo_resource.version:DuploVersion"
service = "duplo_resource.service:DuploService"
ecs = "duplo_resource.ecs_service:DuploEcsService"
cronjob = "duplo_resource.cronjob:DuploCronJob"
job = "duplo_resource.job:DuploJob"
pod = "duplo_resource.pod:DuploPod"
ssm_param = "duplo_resource.ssm_param:DuploParam"
aws_secret = "duplo_resource.aws_secret:DuploAwsSecret"
user = "duplo_resource.user:DuploUser"
lambda = "duplo_resource.lambda:DuploLambda"
jit = "duplo_resource.jit:DuploJit"
system = "duplo_resource.system:DuploSystem"
asg = "duplo_resource.asg:DuploAsg"
secret = "duplo_resource.secret:DuploSecret"
configmap = "duplo_resource.configmap:DuploConfigMap"
ai = "duplo_resource.ai:DuploAI"
hosts = "duplo_resource.hosts:DuploHosts"
ingress = "duplo_resource.ingress:DuploIngress"
rds = "duplo_resource.rds:DuploRDS"
s3 = "duplo_resource.s3:DuploS3"
storageclass = "duplo_resource.storageclass:DuploStorageClass"
pvc = "duplo_resource.pvc:PersistentVolumeClaim"
cloudfront = "duplo_resource.cloudfront:DuploCloudFront"
batch_compute = "duplo_resource.batch_compute:DuploBatchCompute"
batch_queue = "duplo_resource.batch_queue:DuploBatchQueue"
batch_definition = "duplo_resource.batch_definition:DuploBatchDefinition"
batch_job = "duplo_resource.batch_job:DuploBatchJob"
batch_scheduling_policy = "duplo_resource.batch_scheduling_policy:DuploBatchSchedulingPolicy"
argo_wf = "duplo_resource.argo_wf:DuploArgoWorkflow"
cache = "duplo_resource.cache:DuploCache"

[project.entry-points."clients.duplocloud.net"]
duplo = "duplocloud.client:DuploAPI"

[project.entry-points."formats.duplocloud.net"]
json = "duplocloud.formats:tojson"
yaml = "duplocloud.formats:toyaml"
string = "duplocloud.formats:tostring"
env = "duplocloud.formats:toenv"
csv = "duplocloud.formats:tocsv"
