[metadata]
name = duplocloud-client
; version = 1.0.0
author = Kelly Ferrone
author_email = kelly@duplocloud.net
description = Generic DuploClient for Python apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duplocloud/py-client
project_urls =
    Bug Tracker = https://github.com/duplocloud/py-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires = 
    requests >= 2.22.0
    cachetools >= 5.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    duplo-cli = duplocloud.cli:main

duplocloud.net =
    service = duplo_resource.service:DuploService
    tenant = duplo_resource.tenant:DuploTenant
    