[project]
name = "duploctl-krm"
description = "KRM Helper functions for Duploctl"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.10.0"
keywords = [
  "duplocloud",
  "duplo", 
  "duploctl", 
  "duplo-client",
  "kubernetes"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
authors = [
{ name = "Kelly", email = "kelly@duplocloud.net" }
]
maintainers = [
{ name = "Kelly", email = "kelly@duplocloud.net" }
]
dependencies = [
  "kubernetes>=31.0.0"
]
[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "build"
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://cli.duplocloud.com/"
Documentation = "https://cli.duplocloud.com/"
Repository = "https://github.com/duplocloud/duploctl"
Issues = "https://github.com/duplocloud/duploctl/issues"
Changelog = "https://github.com/duplocloud/duploctl"
LatestRelease = "https://github.com/duplocloud/duploctl/releases"

[tool.setuptools]
include-package-data = false
packages = ["duploctl_krm"]
package-dir={'duploctl_krm' = '.'}

[project.entry-points."duplocloud.net"]
krm = "duploctl_krm.krm:DuploKRM"
